# ImmunoSeq

./: .gitignore  README.md  pyproject.toml  requirements.txt
data/: humab25_immunogenicity_predictions.csv  humab25_sequences.csv
data/OAS_PAIRED_HUMAN/: bulk_download.sh
data/OAS_PAIRED_MOUSE/: bulk_download.sh
design/: Bevacizumab.txt  Bevacizumab_infer_mut_oneshot.csv  CD28.txt  CD28_infer_mut_oneshot.csv  Campath.txt  Campath_infer_mut_oneshot.csv  Certolizumab.txt  Certolizumab_infer_mut_oneshot.csv  Clazakizumab.txt  Clazakizumab_infer_mut_oneshot.csv  Crizanlizumab.txt  Crizanlizumab_infer_mut_oneshot.csv  Eculizumab.txt  Eculizumab_infer_mut_oneshot.csv  Etaracizumab.txt  Etaracizumab_infer_mut_oneshot.csv  Herceptin.txt  Herceptin_infer_mut_oneshot.csv  Idarucizumab.txt  Idarucizumab_infer_mut_oneshot.csv  Ixekizumab.txt  Ixekizumab_infer_mut_oneshot.csv  Ligelizumab.txt  Ligelizumab_infer_mut_oneshot.csv  Lorvotuzumab.txt  Lorvotuzumab_infer_mut_oneshot.csv  Mogamulizumab.txt  Mogamulizumab_infer_mut_oneshot.csv  Omalizumab.txt  Omalizumab_infer_mut_oneshot.csv  Palivizumab.txt  Palivizumab_infer_mut_oneshot.csv  Pembrolizumab.txt  Pembrolizumab_infer_mut_oneshot.csv  Pertuzumab.txt  Pertuzumab_infer_mut_oneshot.csv  Pinatuzumab.txt  Pinatuzumab_infer_mut_oneshot.csv  Refanezumab.txt  Refanezumab_infer_mut_oneshot.csv  (+10 more)
notebooks/: eval_abnativ.ipynb
src/: args.py  eval_abnativ.py  eval_ada_correlation.py  eval_humab25.py  eval_humanness_classification.py  infer.py  predict.py  prepare.py  utils.py
