[project]
name = "immunoseq"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "bloom-filter2==2.0.0",
    "click>=8.3.1",
    "ipykernel>=7.1.0",
    "matplotlib==3.10.5",
    "numpy==1.26.4",
    "pandas==2.3.1",
    "scikit-learn==1.7.1",
    "seaborn==0.13.2",
    "torch==2.2.2",
    "torchmetrics==1.4.3",
]
